Fixed: Nested lists had too much margin

--- a/src/client/less/markdown.less
+++ b/src/client/less/markdown.less
@@ -42,6 +42,11 @@
 
   ul, ol {
     margin: 0 0 45px;
+
+    ul, ol {
+      // No margin for nested lists
+      margin: 0;
+    }
   }
   li {
     margin: 5px 0;
